fixed how to read getting cut off

--- a/src/components/CollapsibleSection/CollapsibleSection.css
+++ b/src/components/CollapsibleSection/CollapsibleSection.css
@@ -46,7 +46,7 @@
 }
 
 .collapsible-content.expanded {
-  max-height: 2000px; /* Large enough to accommodate content */
+  max-height: 5000px; /* Large enough to accommodate content */
 }
 
 .collapsible-content-inner {
